Full download lifecycle management - download to index and copy to local nodes